# devmoji-log

./: Cargo.toml  README.md  dist-workspace.toml  flake.nix  rustfmt.toml
src/: commit.rs  main.rs
